feat: select register type upon register

--- a/src/app/pages/admin/admin-places/admin-places.component.html
+++ b/src/app/pages/admin/admin-places/admin-places.component.html
@@ -40,11 +40,20 @@
               <div class="select">
                 <select [(ngModel)]="filter.tipo" class="input" name="tipo" id="tipo">
                   <option value="">Selecione...</option>
-                  <option value="restaurante">Restaurante</option>
-                  <option value="academia">Academia</option>
-                  <option value="mercado">Mercado</option>
-                  <option value="salao_de_beleza">Salão de Beleza</option>
-                  <option value="banco">Banco</option>
+                  <option value="Restaurante">Restaurante</option>
+                  <option value="Academia">Academia</option>
+                  <option value="Mercado">Mercado</option>
+                  <option value="Super Mercado">Super Mercado</option>
+                  <option value="Salão de Beleza">Salão de Beleza</option>
+                  <option value="Banco">Banco</option>
+                  <option value="Loja">Loja</option>
+                  <option value="Escola">Escola</option>
+                  <option value="Faculdade">Faculdade</option>
+                  <option value="Hotel">Hotel</option>
+                  <option value="Motel">Motel</option>
+                  <option value="Clínica">Clínica</option>
+                  <option value="Hospital">Hospital</option>
+                  <option value="Farmácia">Farmácia</option>
                 </select>
               </div>
             </div>
