--- a/src/app/pages/places/places.component.html
+++ b/src/app/pages/places/places.component.html
@@ -37,6 +37,7 @@
                 <option value="Motel">Motel</option>
                 <option value="Clínica">Clínica</option>
                 <option value="Hospital">Hospital</option>
+                <option value="Farmácia">Farmácia</option>
               </select>
             </div>
           </div>
