--- a/src/app/pages/new-place/new-place.component.html
+++ b/src/app/pages/new-place/new-place.component.html
@@ -47,6 +47,7 @@
                       <option value="Motel">Motel</option>
                       <option value="Clínica">Clínica</option>
                       <option value="Hospital">Hospital</option>
+                      <option value="Farmácia">Farmácia</option>
                     </select>
                   </div>
                 </div>
