feat: novos campos na avaliação e foto no estab

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
         <a class="navbar-item" routerLink="/estabelecimentos" routerLinkActive="is-active" tabindex="0">
           Estabelecimentos
         </a>
-        <a class="navbar-item" routerLink="/estabelecimentos/adicionar" routerLinkActive="is-active" tabindex="0" *ngIf="userIsPlace || userIsAdmin">
+        <a class="navbar-item" routerLink="/estabelecimentos/adicionar" routerLinkActive="is-active" tabindex="0">
           Adicionar estabelecimento
         </a>
         <div class="navbar-item has-dropdown is-hoverable" *ngIf="userIsAdmin">
