--- a/src/app/pages/admin/admin-places/admin-places.component.html
+++ b/src/app/pages/admin/admin-places/admin-places.component.html
@@ -195,6 +195,12 @@
                   </span>
                   <span>sinalização</span>
                 </span>
+                <span class="tag" *ngIf="place.pap">
+                  <span class="icon">
+                    <i class="fas fa-smile-beam"></i>
+                  </span>
+                  <span>posicionamento atitudinal positivo</span>
+                </span>
               </div>
             </div>
             <footer class="card-footer">
