--- a/src/app/pages/admin/admin-places/admin-places.component.html
+++ b/src/app/pages/admin/admin-places/admin-places.component.html
@@ -156,7 +156,7 @@
                   <bar-rating [(rate)]="place.avaliacao_media" theme="stars" [readOnly]="true"></bar-rating>
                 </div>
                 <div class="column">
-                  <address>
+                  <address *ngIf="place.endereco">
                     CEP {{ place.endereco.cep }}<br>
                     {{ place.endereco.cidade }}, {{ place.endereco.estado }}<br>
                     Bairro {{ place.endereco.bairro }}<br>
