--- a/src/app/pages/place/place.component.html
+++ b/src/app/pages/place/place.component.html
@@ -54,7 +54,7 @@
               </span>
             </div>
           </div>
-          <div class="box">
+          <div class="box" *ngIf="place.endereco">
             <h3 class="title is-5 mb-3">Endereço</h3>
             <address>
               CEP {{ place.endereco.cep }}<br>
