--- a/src/app/pages/places/places.component.html
+++ b/src/app/pages/places/places.component.html
@@ -156,7 +156,7 @@
                   <span>posicionamento atitudinal positivo</span>
                 </span>
               </div>
-              <address>
+              <address *ngIf="place.endereco">
                 CEP {{ place.endereco.cep }}<br>
                 {{ place.endereco.cidade }}, {{ place.endereco.estado }}<br>
                 Bairro {{ place.endereco.bairro }}<br>
